--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,14 @@
 
             <!-- Camera Feed Card -->
             <div class="card camera-card">
-                <h2>Camera Feed</h2>
+                <div class="camera-header">
+                    <h2>Camera Feed</h2>
+                    <button id="pauseOnIdleBtn" class="pause-on-idle-btn" title="Pause camera on idle">
+                        <span class="btn-icon">⏸</span>
+
+                        <span class="btn-text">Pause on Idle</span>
+                    </button>
+                </div>
                 <div class="camera-container" id="cameraContainer">
                     <div class="camera-placeholder" id="cameraPlaceholder">
                         <span>No camera feed available</span>
