limited websocket updates to 1 per second added current time display

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
 <body>
     <div class="container">
         <header>
-            <h1>Elegoo Print Monitor</h1>
+            <h1>Print Monitor</h1>
             <div class="connection-status">
                 <span class="status-indicator" id="connectionStatus"></span>
                 <span id="connectionText">Disconnected</span>
                 <span class="status-separator">|</span>
                 <span class="user-count" id="userCount">0 users online</span>
+                <span class="status-separator">|</span>
+                <span class = "current-time" id="currentTime"> --:--:-- </span>
             </div>
         </header>
 
@@ -139,7 +141,7 @@
         </div>
 
         <footer>
-            <p>Elegoo Centauri Carbon Print Monitor | Real-time monitoring via SDCP protocol</p>
+            <p>Print Monitor | Real-time monitoring via SDCP</p>
         </footer>
     </div>
 
